updated config url

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -16,7 +16,7 @@ Browser=Chrome
 #Browser=IOS
 
 ################################     PROJECT URL      #########################################
-URL=http://localhost:8080/login.do
+applicationURL=http://desktop-mueo3j6/login.do
 
 ################################ TEST DATA DIRECTORY  #########################################
 TestDataPath=
